# 3DWord

./: .clang-format  .gitignore  3DWord_stats.txt  3DWorld_stats.txt  CMakeLists.txt  Description.txt  Readme.md  quick-run
scripts/: reachable_fast  reachable_slow  simulation1
src/: 3ddemo.cpp  CMakeLists.txt  DebugStream.cpp  DebugStream.h  Simulation.cpp  Simulation.h  Vector3D.cpp  Vector3D.h  repl_tools.cpp  repl_tools.h  robotworld.cpp  sim_commands.cpp  sim_commands.h
